Use the generated checks for whether origin trials are enabled.

BUG=635741

Review-Url: https://codereview.chromium.org/2454513002
Cr-Commit-Position: refs/heads/master@{#427602}

Former-commit-id: 3a5a4c96d03ff39adaed79d3fa0af80587e091c1